--- a/index.html
+++ b/index.html
@@ -1,148 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://img.icons8.com/ios/50/ffffff/marker-v.png">
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Voyagers</title>
-  </head>
-  <!-- this is just to text git -->
-  <body>
-    <header class="header">
-      <nav class="navbar">
-        <ul class="nav-items">
-          <li class="nav-item">
-            <a class="nav-link" href="home.html">Home</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="feedback.html">Contact</a></li>
-        </ul>
-        <a class="nav-brand" href="#">Voyagers</a>
-        <ul class="nav-items item-right">
-          <li class="nav-item">
-            <a class="nav-link" href="login.html">Log In</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
-        </ul>
-      </nav>
 
-      <div class="hero">
-        <div class="heading">
-          <h1 class="heading-primary">
-            EXPERIENCE THE BEAUTY OF <span class="india">इंडिया</span> WITH US
-          </h1>
-          <h3 class="heading-secondary">
-            DARE TO LIVE THE LIFE YOU'VE ALWAYS WANTED
-          </h3>
-          <a class="button-primary" href="home.html"
-            >EXPLORE MORE <span class="right-arrow">&#8594;</span></a
-          >
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="https://img.icons8.com/ios/50/ffffff/marker-v.png">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Voyagers</title>
+</head>
+
+<body>
+  <header class="header">
+    <nav class="navbar">
+      <ul class="nav-items">
+        <li class="nav-item">
+          <a class="nav-link" href="home.html">Home</a>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="feedback.html">Contact</a></li>
+      </ul>
+      <a class="nav-brand" href="#">Voyagers</a>
+      <ul class="nav-items item-right">
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Log In</a>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
+      </ul>
+    </nav>
+
+    <div class="hero">
+      <div class="heading">
+        <h1 class="heading-primary">
+          EXPERIENCE THE BEAUTY OF <span class="india">इंडिया</span> WITH US
+        </h1>
+        <h3 class="heading-secondary">
+          DARE TO LIVE THE LIFE YOU'VE ALWAYS WANTED
+        </h3>
+        <a class="button-primary" href="home.html">EXPLORE MORE <span class="right-arrow">&#8594;</span></a>
       </div>
-    </header>
-    <div class="divider-text">
-      <div>POSTS</div>
     </div>
-    <section class="section-feature" id="#section-feature">
-      <div class="feature-box">
-        <div class="feature-image feature-image-1">&nbsp;</div>
-        <div class="feature-text feature-text-1">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
-          libero commodi beatae error, adipisci odio officia eum voluptatem ut
-          unde impedit provident fuga rem, atque cupiditate ad aliquid. Dolorem,
-          repudiandae?
-        </div>
+  </header>
+  <div class="divider-text">
+    <div>POSTS</div>
+  </div>
+  <section class="section-feature" id="#section-feature">
+    <div class="feature-box">
+      <div class="feature-image feature-image-1">&nbsp;</div>
+      <div class="feature-text feature-text-1">
+        I’ve realized that it’s been a while since I last talked about the best travel blogs out there — the ones I read
+        — so I wanted to take a moment and highlight some of my favorite travel blogs that can also help you travel
+        better, cheaper, and smarter. There are so many good blogs out there, I feel like I’m long overdue to point you
+        to some of them:
       </div>
-      <div class="feature-box">
-        <div class="feature-text feature-text-2">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
-          libero commodi beatae error, adipisci odio officia eum voluptatem ut
-          unde impedit provident fuga rem, atque cupiditate ad aliquid. Dolorem,
-          repudiandae?
-        </div>
-        <div class="feature-image feature-image-2">&nbsp;</div>
+    </div>
+    <div class="feature-box">
+      <div class="feature-text feature-text-2">
+        I’ve realized that it’s been a while since I last talked about the best travel blogs out there — the ones I read
+        — so I wanted to take a moment and highlight some of my favorite travel blogs that can also help you travel
+        better, cheaper, and smarter. There are so many good blogs out there, I feel like I’m long overdue to point you
+        to some of them:
       </div>
-      <div class="feature-box">
-        <div class="feature-image feature-image-3">&nbsp;</div>
+      <div class="feature-image feature-image-2">&nbsp;</div>
+    </div>
+    <div class="feature-box">
+      <div class="feature-image feature-image-3">&nbsp;</div>
 
-        <div class="feature-text feature-text-3">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
-          libero commodi beatae error, adipisci odio officia eum voluptatem ut
-          unde impedit provident fuga rem, atque cupiditate ad aliquid. Dolorem,
-          repudiandae?
-        </div>
+      <div class="feature-text feature-text-3">
+        I’ve realized that it’s been a while since I last talked about the best travel blogs out there — the ones I read
+        — so I wanted to take a moment and highlight some of my favorite travel blogs that can also help you travel
+        better, cheaper, and smarter. There are so many good blogs out there, I feel like I’m long overdue to point you
+        to some of them:
       </div>
-      <div class="feature-box">
-        <div class="feature-text feature-text-4">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
-          libero commodi beatae error, adipisci odio officia eum voluptatem ut
-          unde impedit provident fuga rem, atque cupiditate ad aliquid. Dolorem,
-          repudiandae?
-        </div>
-        <div class="feature-image feature-image-4">&nbsp;</div>
+    </div>
+    <div class="feature-box">
+      <div class="feature-text feature-text-4">
+        I’ve realized that it’s been a while since I last talked about the best travel blogs out there — the ones I read
+        — so I wanted to take a moment and highlight some of my favorite travel blogs that can also help you travel
+        better, cheaper, and smarter. There are so many good blogs out there, I feel like I’m long overdue to point you
+        to some of them:
       </div>
-    </section>
-    <footer class="footer">
-      <div class="footer-content-left">
-        <ul class="footer-items">
-          <li class="footer-heading">Contributors</li>
-          <li class="footer-item">
-              <a class="footer-link" target="_blank" href="https://www.instagram.com/amit.fiend/">Amit Kumar Singh</a>
-          </li>
-          <li class="footer-item">
-              <a class="footer-link" target="_blank"
-                  href="https://www.instagram.com/a.a.r.y.a.n.5.4.3/">Aaryan Singh</a>
-          </li>
-          <li class="footer-item">
-              <a class="footer-link" target="_blank" href="https://www.instagram.com/aakashsedha/">AakashDeep Sedha</a>
-          </li>
-          <li class="footer-item">
-              <a class="footer-link" target="_blank" href="https://www.instagram.com/abhinav_02.08_/">Abhinav Gupta</a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-content-right">
-        <p class="footer-right-text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi id
-          aspernatur eos sequi exercitationem illo deleniti. Rem odio, dicta
-          repellendus facere illum beatae facilis voluptatum reiciendis
-          voluptatem quisquam ducimus voluptatibus.
-        </p>
-      </div>
-    </footer>
-    <script>
-      // const icon = document.getElementById("dark-mode");
-      // icon.addEventListener('click', function(){
-      //   document.body.classList.toggle("dark-theme")
-      //   if(document.body.classList.contains("dark-theme")){
-      //     icon.src = "images/sun.png";
-      //   }else{
-      //     icon.src = "images/moon.png"
-      //   }
-      // })
-      // const header = document.querySelector(".header");
-      // const navbar = document.querySelector(".navbar");
-      // const stickyNav = function (entries) {
-      //   const [entry] = entries;
-      //   if (!entry.isIntersecting) {
-      //     navbar.style.backgroundColor = "#0f0f0d";
-      //   }
-      //   if (entry.isIntersecting) {
-      //     navbar.style.backgroundColor = "transparent";
-      //   }
-      // };
-      // const observer = new IntersectionObserver(stickyNav, {
-      //   root: null,
-      //   threshold: 0.1,
-      // });
-      // observer.observe(header);
-    </script>
-  </body>
+      <div class="feature-image feature-image-4">&nbsp;</div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="footer-content-left">
+      <ul class="footer-items">
+        <li class="footer-heading">Contributors</li>
+        <li class="footer-item">
+          <a class="footer-link" target="_blank" href="https://www.instagram.com/amit.fiend/">Amit Kumar Singh</a>
+        </li>
+        <li class="footer-item">
+          <a class="footer-link" target="_blank" href="https://www.instagram.com/a.a.r.y.a.n.5.4.3/">Aaryan Singh</a>
+        </li>
+        <li class="footer-item">
+          <a class="footer-link" target="_blank" href="https://www.instagram.com/aakashsedha/">AakashDeep Sedha</a>
+        </li>
+        <li class="footer-item">
+          <a class="footer-link" target="_blank" href="https://www.instagram.com/abhinav_02.08_/">Abhinav Gupta</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-content-right">
+      <p class="footer-right-text">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi id
+        aspernatur eos sequi exercitationem illo deleniti. Rem odio, dicta
+        repellendus facere illum beatae facilis voluptatum reiciendis
+        voluptatem quisquam ducimus voluptatibus.
+      </p>
+    </div>
+  </footer>
+</body>
+
 </html>
