--- a/index.html
+++ b/index.html
@@ -111,6 +111,33 @@
       </p>
     </div>
   </footer>
+  <script>
+  const icon = document.getElementById("dark-mode");
+  icon.addEventListener('click', function(){
+    document.body.classList.toggle("dark-theme")
+    if(document.body.classList.contains("dark-theme")){
+      icon.src = "images/sun.png";
+    }else{
+      icon.src = "images/moon.png"
+    }
+  })
+  const header = document.querySelector(".header");
+  const navbar = document.querySelector(".navbar");
+  const stickyNav = function (entries) {
+    const [entry] = entries;
+    if (!entry.isIntersecting) {
+      navbar.style.backgroundColor = "#0f0f0d";
+    }
+    if (entry.isIntersecting) {
+      navbar.style.backgroundColor = "transparent";
+    }
+  };
+  const observer = new IntersectionObserver(stickyNav, {
+    root: null,
+    threshold: 0.1,
+  });
+  observer.observe(header);
+  </script>
 </body>
 
 </html>
