--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
       </ul>
       <a class="nav-brand" href="#">Voyagers</a>
       <ul class="nav-items item-right">
+        <img src="images/moon.png" id="dark-mode" />
         <li class="nav-item">
           <a class="nav-link" href="login.html">Log In</a>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
+        <li class="nav-item"><a class="nav-link" href="signUp.html">Sign Up</a></li>
       </ul>
     </nav>
 
@@ -112,31 +113,31 @@
     </div>
   </footer>
   <script>
-  const icon = document.getElementById("dark-mode");
-  icon.addEventListener('click', function(){
-    document.body.classList.toggle("dark-theme")
-    if(document.body.classList.contains("dark-theme")){
-      icon.src = "images/sun.png";
-    }else{
-      icon.src = "images/moon.png"
-    }
-  })
-  const header = document.querySelector(".header");
-  const navbar = document.querySelector(".navbar");
-  const stickyNav = function (entries) {
-    const [entry] = entries;
-    if (!entry.isIntersecting) {
-      navbar.style.backgroundColor = "#0f0f0d";
-    }
-    if (entry.isIntersecting) {
-      navbar.style.backgroundColor = "transparent";
-    }
-  };
-  const observer = new IntersectionObserver(stickyNav, {
-    root: null,
-    threshold: 0.1,
-  });
-  observer.observe(header);
+    const icon = document.getElementById("dark-mode");
+    icon.addEventListener('click', function () {
+      document.body.classList.toggle("dark-theme")
+      if (document.body.classList.contains("dark-theme")) {
+        icon.src = "images/sun.png";
+      } else {
+        icon.src = "images/moon.png"
+      }
+    })
+    const header = document.querySelector(".header");
+    const navbar = document.querySelector(".navbar");
+    const stickyNav = function (entries) {
+      const [entry] = entries;
+      if (!entry.isIntersecting) {
+        navbar.style.backgroundColor = "#0f0f0d";
+      }
+      if (entry.isIntersecting) {
+        navbar.style.backgroundColor = "transparent";
+      }
+    };
+    const observer = new IntersectionObserver(stickyNav, {
+      root: null,
+      threshold: 0.1,
+    });
+    observer.observe(header);
   </script>
 </body>
 
